--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ gym==0.21.0
 h5py==3.6.0
 idna==3.3
 imageio==2.13.3
-importlib-metadata==4.8.2
+importlib-metadata==3.6.0
 importlib-resources==5.4.0
 keras==2.7.0
 Keras-Preprocessing==1.1.2
@@ -48,7 +48,7 @@ tensorflow-estimator==2.7.0
 tensorflow-io-gcs-filesystem==0.22.0
 termcolor==1.1.0
 tqdm==4.62.3
-typing-extensions==4.0.1
+typing_extensions==4.0.1
 urllib3==1.26.7
 Werkzeug==2.0.2
 wrapt==1.13.3
